# DoAnChuyenNganh_K22_DCT122C5

./: .gitignore  README.md
Main_Project/BE/: .env.example  Dockerfile  OCR_only.json  n8n_to_interface.json  pyproject.toml  requirements.txt  uvicorn_startup.err  uvicorn_startup.out
Main_Project/BE/app/: config.py  database.py  main.py
Main_Project/BE/app/models/: __init__.py  category.py  recurring_transaction.py  transaction.py  transfer.py  user.py  wallet.py
Main_Project/BE/app/routers/: ai.py  auth.py  categories.py  recurring.py  reports.py  transactions.py  transfers.py  wallets.py
Main_Project/BE/app/schemas/: category.py  recurring.py  transaction.py  transfer.py
Main_Project/BE/app/services/: ai_service.py  auth_service.py  category_service.py  ocr_service.py  recurring_service.py  report_service.py  transaction_service.py  transfer_service.py  wallet_service.py
Main_Project/BE/app/utils/: dependencies.py  security.py
Main_Project/BE/src/finance_svc/: asgi.py  dependencies.py
Main_Project/BE/src/finance_svc/core/: config.py  database.py  security.py
Main_Project/BE/src/finance_svc/models/: __init__.py  category.py  notification.py  recurring_transaction.py  transaction.py  transfer.py  user.py  wallet.py
Main_Project/BE/src/finance_svc/schemas/: ai.py  auth.py  notification.py  recurring.py  report.py  transaction.py  wallet.py
Main_Project/BE/src/finance_svc/services/: ai_service.py  auth_service.py  category_service.py  notification_service.py  ocr_service.py  (+5 more)
Main_Project/BE/tests/: test_e2e.py  test_jelly_chat.py  test_transactions.py
(+98 files in other folders)
