[project]
name = "finance-svc"
version = "0.1.0"
description = "Personal Finance Manager API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pymysql>=1.1.1",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "groq>=0.11.0",
    "google-generativeai>=0.8.3",
    "veryfi>=5.0.0",
    "httpx>=0.27.2",
    "apscheduler>=3.10.4",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_svc"]
